--- a/templates/mycalc/main.html
+++ b/templates/mycalc/main.html
@@ -2146,7 +2146,7 @@
 
         function SentAjax($data) {
             $.ajax({
-                url: '',
+                url: '../../calculator/get_data_from_js.py/',
                 type: 'post',
                 data: $data,
                 success:function(response){
