--- a/templates/mycalc/main.html
+++ b/templates/mycalc/main.html
@@ -1903,6 +1903,9 @@
         </div>
     </div>
 </div>
+<div class="sec_token">
+    {% csrf_token %}
+</div>
 <footer class="footer">
     <div class="wrapper">
         <div class="footer-text">Данная программа рассчитывает характеристики системы с технической изоляцией PAROC и
@@ -2039,6 +2042,7 @@
 
             };
             console.log(data);
+            SentAjax(data, 'trub');
             return false;
         });
 
@@ -2087,6 +2091,7 @@
 
             };
             console.log(data);
+            SentAjax(data, 'plosk');
             return false;
         });
 
@@ -2141,14 +2146,15 @@
 
             };
             console.log(data);
+            SentAjax(data,'emk');
             return false;
         });
 
-        function SentAjax($data) {
+        function SentAjax($data, type) {
             $.ajax({
                 url: '/add/',
-                type: 'post',
-                data: $data,
+                type: 'POST',
+                data: {'data': $data, 'csrfmiddlewaretoken': $("input[name='csrfmiddlewaretoken']").val(), 'type':type},
                 success:function(response){
                     console.log(response)
                 }
