print run macros

--- a/templates/mycalc/main.html
+++ b/templates/mycalc/main.html
@@ -1996,7 +1996,7 @@
                 })
             });
             sloi_tmp = "";
-            sloi_plosk.forEach(function(el){
+            sloi_trub.forEach(function(el){
                 sloi_tmp += el.id+';'+el.temp+';';
             });
 
@@ -2115,7 +2115,7 @@
                 })
             });
             sloi_tmp = "";
-            sloi_plosk.forEach(function(el){
+            sloi_emk.forEach(function(el){
                 sloi_tmp += el.id+';'+el.temp+';';
             });
 
